Fixed some whitelist bugs Fixed a database loading error Fixed an error that occurred when currency was set to an empty object. Playtime of players will no longer be checked if new-player-immunity is disabled Playtime of offline players will only be checked when the new-player-immunity value changes Playtime of offline players is now checked over multiple ticks